--- a/Resources/Private/Language/locallang.xml
+++ b/Resources/Private/Language/locallang.xml
@@ -9,6 +9,16 @@
 			<label index="task.action">CommandController Command</label>
 			<label index="task.name">Extbase CommandController Task</label>
 			<label index="task.description">Allows Extbase CommandController commands to be configured and executed through the scheduler framework.</label>
+
+			<label index="tx_cicbase_domain_model_file.errorTooBig">The file was not uploaded because it was too big.</label>
+			<label index="tx_cicbase_domain_model_file.errorPartialFile">The file was only partially uploaded. Please try again.</label>
+			<label index="tx_cicbase_domain_model_file.errorNoFile">No file was uploaded.</label>
+			<label index="tx_cicbase_domain_model_file.errorBadConfig">The PHP configuration for uploading files is not correct. Check permissions and temporary folders.</label>
+			<label index="tx_cicbase_domain_model_file.errorUnknown">Unrecognized file upload error.</label>
+			<label index="tx_cicbase_domain_model_file.errorForbiddenMime">The file's mime type is not allowed.</label>
+			<label index="tx_cicbase_domain_model_file.errorMimeExtensionBadMatch">The file's mime type does not match the file's extension.</label>
+			<label index="tx_cicbase_domain_model_file.errorNotSaved">The file could not be saved for no apparent reason. Try again.</label>
+
 		</languageKey>
 	</data>
 </T3locallang>
