[BUGFIX] Using LL label for table name so group name is correct in new record interface

--- a/Resources/Private/Language/locallang_db.xml
+++ b/Resources/Private/Language/locallang_db.xml
@@ -6,7 +6,7 @@
 	</meta>
 	<data type="array">
 		<languageKey index="default" type="array">
-			<label index="tx_cicbase_domain_model_file">File</label>
+			<label index="tx_cicbase_domain_model_file">User File Upload</label>
 			<label index="tx_cicbase_domain_model_file.filename">Filename</label>
 			<label index="tx_cicbase_domain_model_file.originalFilename">Original Filename</label>
 			<label index="tx_cicbase_domain_model_file.path">Path</label>
